--- a/Selkie.Framework/packages.config
+++ b/Selkie.Framework/packages.config
@@ -5,16 +5,16 @@
   <package id="Castle.Core-NLog" version="3.3.3" targetFramework="net45" />
   <package id="Castle.LoggingFacility" version="3.3.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
-  <package id="EasyNetQ" version="0.50.1.392" targetFramework="net45" />
+  <package id="EasyNetQ" version="0.50.7.399" targetFramework="net45" />
   <package id="EasyNetQ.Management.Client" version="0.47.12.38" targetFramework="net45" />
-  <package id="JetBrains.Annotations.Redist" version="7.1" targetFramework="net45" />
-  <package id="NLog" version="3.1.0.0" targetFramework="net45" />
-  <package id="RabbitMQ.Client" version="3.5.3" targetFramework="net45" />
-  <package id="Selkie.Common" version="0.6.172.0" targetFramework="net45" />
-  <package id="Selkie.EasyNetQ" version="0.6.162.0" targetFramework="net45" />
-  <package id="Selkie.Geometry" version="0.6.93.0" targetFramework="net45" />
-  <package id="Selkie.Services.Aco.Common" version="0.6.8.0" targetFramework="net45" />
-  <package id="Selkie.Services.Lines.Common" version="0.6.24.0" targetFramework="net45" />
-  <package id="Selkie.Services.Racetracks.Common" version="0.6.53.0" targetFramework="net45" />
-  <package id="Selkie.Windsor" version="0.6.224.0" targetFramework="net45" />
+  <package id="JetBrains.Annotations" version="9.2.0" targetFramework="net45" />
+  <package id="NLog" version="4.1.0" targetFramework="net45" />
+  <package id="RabbitMQ.Client" version="3.5.4" targetFramework="net45" />
+  <package id="Selkie.Common" version="0.6.190.0" targetFramework="net45" />
+  <package id="Selkie.EasyNetQ" version="0.6.185.0" targetFramework="net45" />
+  <package id="Selkie.Geometry" version="0.6.105.0" targetFramework="net45" />
+  <package id="Selkie.Services.Aco.Common" version="0.6.10.0" targetFramework="net45" />
+  <package id="Selkie.Services.Lines.Common" version="0.6.25.0" targetFramework="net45" />
+  <package id="Selkie.Services.Racetracks.Common" version="0.6.54.0" targetFramework="net45" />
+  <package id="Selkie.Windsor" version="0.6.243.0" targetFramework="net45" />
 </packages>
