--- a/Selkie.Framework.Interfaces/packages.config
+++ b/Selkie.Framework.Interfaces/packages.config
@@ -5,9 +5,9 @@
   <package id="Castle.Core-NLog" version="3.3.3" targetFramework="net45" />
   <package id="Castle.LoggingFacility" version="3.3.0" targetFramework="net45" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
-  <package id="JetBrains.Annotations.Redist" version="7.1" targetFramework="net45" />
-  <package id="NLog" version="3.1.0.0" targetFramework="net45" />
-  <package id="Selkie.Common" version="0.6.172.0" targetFramework="net45" />
-  <package id="Selkie.Geometry" version="0.6.93.0" targetFramework="net45" />
-  <package id="Selkie.Windsor" version="0.6.224.0" targetFramework="net45" />
+  <package id="JetBrains.Annotations" version="9.2.0" targetFramework="net45" />
+  <package id="NLog" version="4.1.0" targetFramework="net45" />
+  <package id="Selkie.Common" version="0.6.190.0" targetFramework="net45" />
+  <package id="Selkie.Geometry" version="0.6.105.0" targetFramework="net45" />
+  <package id="Selkie.Windsor" version="0.6.243.0" targetFramework="net45" />
 </packages>
