--- a/Selkie.Framework.Tests/packages.config
+++ b/Selkie.Framework.Tests/packages.config
@@ -10,18 +10,19 @@
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
   <package id="EasyNetQ" version="0.50.7.399" targetFramework="net45" />
   <package id="EasyNetQ.Management.Client" version="0.47.12.38" targetFramework="net45" />
-  <package id="JetBrains.Annotations" version="9.2.0" targetFramework="net45" />
+  <package id="JetBrains.Annotations" version="10.0.0" targetFramework="net45" />
   <package id="NLog" version="4.1.0" targetFramework="net45" />
   <package id="NSubstitute" version="1.8.2.0" targetFramework="net45" />
   <package id="NUnit" version="2.6.4" targetFramework="net45" />
   <package id="RabbitMQ.Client" version="3.5.4" targetFramework="net45" />
-  <package id="Selkie.Common" version="0.6.190.0" targetFramework="net45" />
-  <package id="Selkie.EasyNetQ" version="0.6.185.0" targetFramework="net45" />
-  <package id="Selkie.Geometry" version="0.6.105.0" targetFramework="net45" />
+  <package id="Selkie.Common" version="0.6.192.0" targetFramework="net45" />
+  <package id="Selkie.EasyNetQ" version="0.6.186.0" targetFramework="net45" />
+  <package id="Selkie.Geometry" version="0.6.111.0" targetFramework="net45" />
   <package id="Selkie.NUnit.Extensions" version="0.6.108.0" targetFramework="net45" />
-  <package id="Selkie.Services.Aco.Common" version="0.6.10.0" targetFramework="net45" />
+  <package id="Selkie.Services.Aco.Common" version="0.6.11.0" targetFramework="net45" />
+  <package id="Selkie.Services.Common.Dto" version="0.6.10.0" targetFramework="net45" />
   <package id="Selkie.Services.Lines.Common" version="0.6.25.0" targetFramework="net45" />
-  <package id="Selkie.Services.Racetracks.Common" version="0.6.54.0" targetFramework="net45" />
+  <package id="Selkie.Services.Racetracks.Common" version="0.6.58.0" targetFramework="net45" />
   <package id="Selkie.Windsor" version="0.6.243.0" targetFramework="net45" />
   <package id="Selkie.XUnit.Extensions" version="0.6.92.0" targetFramework="net45" />
   <package id="xunit" version="1.9.2" targetFramework="net45" />
