--- a/Selkie.WPF.Views/packages.config
+++ b/Selkie.WPF.Views/packages.config
@@ -7,5 +7,6 @@
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="9.2.0" targetFramework="net45" />
   <package id="NLog" version="4.1.0" targetFramework="net45" />
+  <package id="Selkie.Common" version="0.6.192.0" targetFramework="net45" />
   <package id="Selkie.Windsor" version="0.6.243.0" targetFramework="net45" />
 </packages>
