--- a/Selkie.Framework.Tests/Selkie.Framework.Tests.csproj
+++ b/Selkie.Framework.Tests/Selkie.Framework.Tests.csproj
@@ -157,6 +157,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Handlers\XUnit\BestTrailHandlerTests.cs" />
     <Compile Include="Services\Handlers\XUnit\PheromonesHandlerTests.cs" />
+    <Compile Include="XUnit\CalculateCostMatrixManagerTests.cs" />
     <Compile Include="XUnit\ColonyTests.cs" />
     <Compile Include="XUnit\CostMatrixSourceManagerTests.cs" />
     <Compile Include="XUnit\LinesSourceManagerTests.cs" />
