--- a/Selkie.WPF.Models.Common/Selkie.WPF.Models.Common.csproj
+++ b/Selkie.WPF.Models.Common/Selkie.WPF.Models.Common.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Messages\LinesModelLinesRequestMessage.cs" />
     <Compile Include="Messages\NodesModelChangedMessage.cs" />
     <Compile Include="Messages\PheromonesModelChangedMessage.cs" />
+    <Compile Include="Messages\PheromonesModelsSetMessage.cs" />
     <Compile Include="Messages\RacetrackModelChangedMessage.cs" />
     <Compile Include="Messages\RacetracksChangedMessage.cs" />
     <Compile Include="Messages\RacetrackSettingsChangedMessage.cs" />
