--- a/Selkie.WPF.ViewModels/packages.config
+++ b/Selkie.WPF.ViewModels/packages.config
@@ -11,8 +11,14 @@
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net45" />
   <package id="NLog" version="4.1.0" targetFramework="net45" />
   <package id="RabbitMQ.Client" version="3.5.4" targetFramework="net45" />
-  <package id="Selkie.Aop" version="0.6.45.0" targetFramework="net45" />
-  <package id="Selkie.Common" version="0.6.254" targetFramework="net45" />
-  <package id="Selkie.EasyNetQ" version="0.6.246" targetFramework="net45" />
-  <package id="Selkie.Windsor" version="0.6.261" targetFramework="net45" />
+  <package id="Selkie.Aop" version="0.7.17" targetFramework="net45" />
+  <package id="Selkie.Common" version="0.7.26" targetFramework="net45" />
+  <package id="Selkie.EasyNetQ" version="0.7.8" targetFramework="net45" />
+  <package id="Selkie.Framework" version="0.7.24" targetFramework="net45" />
+  <package id="Selkie.Geometry" version="0.7.41.0" targetFramework="net45" />
+  <package id="Selkie.Services.Aco.Common" version="0.7.12.0" targetFramework="net45" />
+  <package id="Selkie.Services.Common.Dto" version="0.7.4" targetFramework="net45" />
+  <package id="Selkie.Services.Lines.Common" version="0.7.11.0" targetFramework="net45" />
+  <package id="Selkie.Services.Racetracks.Common" version="0.7.9.0" targetFramework="net45" />
+  <package id="Selkie.Windsor" version="0.7.39" targetFramework="net45" />
 </packages>
